--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,11 @@ langchain = {extras = ["openai"], version = "^0.3.18"}
 langchain-community = "^0.3.17"
 langchainhub = "^0.1.21"
 langgraph = {extras = ["sqlite"], version = "^0.2.73"}
-sh = "^2.2.1"
 argparse = "^1.4.0"
 gitingest = "^0.1.3"
 gitpython = "^3.1.44"
 langgraph-checkpoint-sqlite = "^2.0.5"
+kubernetes = "^32.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
