--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ gitpython = "^3.1.44"
 langgraph-checkpoint-sqlite = "^2.0.5"
 kubernetes = "^32.0.1"
 ruff = "^0.9.9"
+numpy = "^1.26.4"
+sentence-transformers = "^2.6.0"
+huggingface-hub = "^0.23.0"
+langchain-huggingface = "^0.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
